--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
       with:
         tag_name: ${{ steps.tag.outputs.release_tag }}
         body_path: release.txt
-        files: ./*.jar
+        files: ./build/libs/*.jar
 
     - name: Delete workflow runs
       uses: GitRML/delete-workflow-runs@main
