--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
       run: |
         chmod +x gradlew
         ./gradlew
-        ./gradlew jar
+        ./gradlew :buildPlugin
     
     - name: Generate release tag
       id: tag
@@ -37,7 +37,7 @@ jobs:
       with:
         tag_name: ${{ steps.tag.outputs.release_tag }}
         body_path: release.txt
-        files: ./build/libs/*.jar
+        files: ./build/mirai/*.jar
 
     - name: Delete workflow runs
       uses: GitRML/delete-workflow-runs@main
